# VorpBot

./: .gitignore  Dockerfile  README.md  config.example.toml  create_tables.py  main.py  pyproject.toml
.github/workflows/: docker-publish.yml
vorpbot/: config.py
vorpbot/db/: model.py  repository.py
vorpbot/discord/: client.py  command_area.py  command_selector.py  command_template.py  command_webhook.py  overflow_select.py  selector.py
vorpbot/manager/: area_manager.py  areatemplate.py  steps.py  template_manager.py
vorpbot/poracle/: __init__.py  geofence.py  poracle.py
