[tool.poetry]
name = "vorpbot"
version = "0.1.0"
description = ""
authors = ["Malte <42342921+ccev@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = "^2.0.1"
pydantic = "^1.10.2"
rtoml = "0.8.0"
SQLAlchemy = "^1.4.42"
aiomysql = "^0.1.1"
httpx = "^0.23.0"
cachetools = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
